03_infrastructure/external-access/dev/argocd/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  routes:
    - match: Host(`argocd.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-tls
spec:
  routes:
    - match: Host(`argocd.192.168.2.105.xip.io`)
      kind: Rule
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.192.168.2.105.xip.io`) && Headers(`Content-Type`, `application/grpc`)
      kind: Rule
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
